@@ -45,5 +45,6 @@
     <person name="John Griffin" email="john.giffin@xor.com"/>
     <person name="Duncan Mak" email="duncan@ximian.com"/>
     <person name="Keith Bottner" email="kbottner@istation.com"/>
+    <person name="Mark Crichton" email="crichton@gimp.org"/>
 </maintainers>
 
